# sncf_mcp_server

./: .gitignore  PRICE_SCRAPING_POC.md  README.md  SCRAPING_APPROACHES.md  WEB_SCRAPING_TEST_REPORT.md  WORKING_SCRAPER_GUIDE.md  price_checker.py  pyproject.toml  server.py  test_web_scraping_demo.py  verify_setup.py
sncf_scraper/: README.md  __init__.py  browser_scraper.py  models.py  scraper.py
tests/: README.md  SUMMARY.md  __init__.py  debug_api.py  debug_env.py  debug_env2.py  run_all_tests.py  test_browser_scraper.py  test_pagination.py  test_price_scraper.py  test_search.py  test_simple.py
